--- a/Shader.vcxproj
+++ b/Shader.vcxproj
@@ -101,6 +101,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="shader.glsl" />
+    <None Include="shaderPerVertexLightning.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
