--- a/Shader.vcxproj.filters
+++ b/Shader.vcxproj.filters
@@ -19,5 +19,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="shader.glsl" />
+    <None Include="shaderPerVertexLightning.glsl" />
   </ItemGroup>
 </Project>
