--- a/Shader.vcxproj
+++ b/Shader.vcxproj
@@ -97,12 +97,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <Xml Include="cube.xml" />
+    <Xml Include="cube.xml">
+      <SubType>Designer</SubType>
+    </Xml>
   </ItemGroup>
   <ItemGroup>
+    <None Include="init.lua" />
+    <None Include="resize.lua" />
     <None Include="shader.glsl" />
     <None Include="shaderPerVertexLightning.glsl" />
     <None Include="shader_shadowMap.glsl" />
+    <None Include="update.lua" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
