--- a/Shader.vcxproj.filters
+++ b/Shader.vcxproj.filters
@@ -18,11 +18,11 @@
     <Xml Include="cube.xml" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="shader.glsl" />
-    <None Include="shaderPerVertexLightning.glsl" />
-    <None Include="shader_shadowMap.glsl" />
     <None Include="init.lua" />
     <None Include="update.lua" />
     <None Include="resize.lua" />
+    <None Include="shaderShadowMap.glsl" />
+    <None Include="mainShader.glsl" />
+    <None Include="shaderShadowMapViewer.glsl" />
   </ItemGroup>
 </Project>
